.gitignore update and minor changes in the code
.gitignore updated so Visual Studio related files are not updated.
Minor completions on the code.

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 *.x
 *.m
 *.geany
+.gitattributes
 Debug
 Release
 build
@@ -10,7 +11,8 @@ build
 *.txt
 *.u2d
 *.suo
-*.vfproj.*
+*.sln
+*.vfproj
 *.zip
 .*.swp
 TAGS
